--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ html{
 }}
                     @media only screen and (max-width: 980px) {
                         .titledivider{
-                            height:200px;
+                            height:400px;
                             width:100%;
                             display:flex;
                             position:static;
@@ -113,7 +113,7 @@ html{
                             height: fit-content;
                             width: 100%;
                             transform: scaleX(-1) rotate(180deg);
-                            translate: -200px 10px;
+                            translate: -200px 110px;
                             align-self: center;
                             
                             font-family: 'Playfair Display SC', serif;
@@ -137,6 +137,7 @@ html{
     width:100%;
     display:flex;
     position:static;
+    animation:intro 3s forwards ease-in-out;
 
     border: 0.5px dotted rgb(0,0,0,.5);
 }}
@@ -146,6 +147,7 @@ html{
                             width:100%;
                             display:flex;
                             position:static;
+                            animation:intro 3s forwards ease-in-out;
                         
                             border: 0.5px dotted rgb(0,0,0,.5);
                         }}
@@ -190,7 +192,7 @@ html{
                         .s2text{
                             position:absolute;
                             height: fit-content;
-                            width: 25%;
+                            width: 45%;
                             translate: 0px 0px;
                             align-self:flex-end;
                             margin-left:50%;
@@ -215,6 +217,7 @@ html{
         position: absolute;
         width: 942px;
         height: 600px;
+        animation:intro 3s forwards ease-in-out;
     
         font-family: 'Playfair Display SC', serif;
         font-style: normal;
@@ -229,8 +232,9 @@ html{
                     @media only screen and (max-width: 980px) {
                     .light{
                         position: absolute;
-                        width: 442px;
+                        width: 400px;
                         height: 200px;
+                        animation:intro 3s forwards ease-in-out;
 
                         font-family: 'Playfair Display SC', serif;
                         font-style: normal;
@@ -273,7 +277,7 @@ html{
                     @media only screen and (max-width: 980px) {
                     .lightglow{
                         position: absolute;
-                        width: 442px;
+                        width: 400px;
                         height: 600px;
 
                         font-family: 'Playfair Display SC', serif;
